--- a/punto1/src/main/res/values/strings.xml
+++ b/punto1/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Punto1</string>
+    <string name="lado">Lado</string>
+    <string name="radio">Radio</string>
 </resources>
